# event_horizon

./: .gitattributes  .gitignore  CMakeLists.impl  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  bootstrap_local.sh  bootstrap_local_mac.sh  build_and_publish_native_lib.sh  build_machine.sh  build_native_lib.sh  build_native_tool.sh  config_api.js  config_cpp.cfg  dev_remote_login.sh  docker-compose-dev.yaml  docker-compose.yml  dockerbuild.sh  publish_native_lib.sh  restful-api.yaml  skaffold.yaml  sslhowtorenew.txt  vm_firstrun.sh
.circleci/: config.yml
.github/workflows/: build-nativelibs.yml  build-nginx.yaml  build-restful-api.yaml  build-rsinitiate.yaml  buildall.yml  dockerimage.yml
auth-api/: Dockerfile  app.js  db.js  def_env.cmd  package-lock.json  package.json
auth-api/controllers/: appdataController.js  authController.js  commandController.js  cryptoController.js  entityController.js  mailController.js  projectController.js  sessionController.js  stripeController.js  userController.js
auth-api/helpers/: dataSanitizers.js
auth-api/models/: client_certificate.js  entity.js  fs_source_asset.js
auth-api/routes/: appdataRoute.js  entitiesRoute.js  indexRoute.js  socketRoute.js  tokenRoute.js  usersRoute.js
auth-api/test/: tests.js
configurations/certificates/: client1-crt.pem  client1-key.pem  client1.cnf  client2-crt.pem  client2-key.pem  client2.cnf  daemonS-crt.pem  daemonS-key.pem  daemonS.cnf
configurations/linux-dev/: build-machine.sh  build_machine_new.sh  createdroplet.ssh  deploy.sh  deploy_substance_daemon.sh  dockerfile  gitbuild.sh  gitbuild_glew.sh  gitbuild_openssl.sh  gitmakebuild.sh  install_boost.sh  install_cimg.sh  install_cmake.sh  install_embree.sh  install_emscripten.sh  install_git-lfs.sh  install_mkl.sh  make_script_exec.sh  postbuild_opencv.sh  postbuild_openvr.sh
daemons/substance_daemon/: CMakeLists.txt  main.cpp
deploy/docker-compose/: docker-compose.yml
dev_tools/admin/: package.json
dev_tools/authtool/: package.json
dev_tools/editor/: CMakeLists.txt  dockerfile  importer_valspar.h  main.cpp  package.json  substance_driver.cpp  substance_driver.h
dev_tools/editor/editor/: callbacks_layout.cpp  callbacks_layout.h  camera_layout.cpp  camera_layout.h  cloud_entities_layout.cpp  cloud_entities_layout.h  cloud_geom_layout.cpp  cloud_geom_layout.h  cloud_material_layout.cpp  cloud_material_layout.h  console_layout.cpp  console_layout.h  full_editor_layout.cpp  full_editor_layout.h  geom_layout.cpp  geom_layout.h  image_layout.cpp  image_layout.h  includes.h  layout_mediator.cpp  layout_mediator.hpp  login_layout.cpp  login_layout.h  material_layout.cpp  material_layout.h  taskbar_layout.cpp  taskbar_layout.hpp  timeline_layout.cpp  timeline_layout.h
dev_tools/editor/public/: CMakeCache.txt  Makefile  editor.cbp  index.html
dev_tools/editor/served/: app.js  package.json
dev_tools/editor/src/: App.css  App.js  index.css  index.js
dev_tools/editor/src/Extra/: socketClientHandlerFactory.js  wasmLoader.js
dev_tools/editor/src/Render/: Render.css  Render.js
dev_tools/editor/src/axios/: axios-api.js  axios-s3.js  backend.js
dev_tools/editor/src/components/render/: Render.css  Render.js
dev_tools/editor/src/extra/: socketClientHandlerFactory.js  wasmLoader.js
dev_tools/editor/src/store/actions/: actionsTypes.js  auth.js  index.js  wasm.js
dev_tools/editor/src/store/reducers/: auth.js  wasm.js
dev_tools/native_sandbox/: CMakeLists.txt  main.cpp
dev_tools/scripting/: CMakeLists.txt  main.cpp
dev_tools/shadertool/: CMakeLists.txt  main.cpp
dev_tools/socket-tester/: package.json
dev_tools/wasmloader/: index.html  script.js  style.css
event_horizon/: CMakeLists.txt
event_horizon/core/: TTF.cpp  TTF.h  app_data.hpp  app_globals.h  boxable.hpp  builders.hpp  callback_dependency.cpp  callback_dependency.h  camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  camera_rig.cpp  camera_rig.hpp  camera_utils.hpp  chunks.cpp  chunks.h  command.cpp  command.hpp  decrypter.h  di.hpp  dirtable.hpp  entity_factory.hpp  file_manager.cpp  file_manager.h  font_manager.cpp  font_manager.h  font_params.hpp  font_utils.cpp  font_utils.hpp  formatting_utils.cpp  game_time.cpp  game_time.h  geom.cpp  geom.hpp  group_container.h  hashable.hpp  hashtaggable.hpp  heterogeneous_map.cpp  heterogeneous_map.hpp  (+57 more)
event_horizon/graphics/: TTF.h  audio_manager.cpp  audio_manager.h  camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  camera_rig.cpp  camera_rig.hpp  di_modules.h  font_manager.cpp  font_manager.h  framebuffer.cpp  framebuffer.h  ghtypes.hpp  gpuv_data_manager.cpp  gpuv_data_manager.hpp  graphic_constants.cpp  graphic_constants.h  graphic_functions.cpp  graphic_functions.hpp  light_manager.cpp  light_manager.h  lightmap_manager.cpp  lightmap_manager.hpp  mouse_input.cpp  mouse_input.hpp  program.h  program_list.h  program_uniform_set.cpp  program_uniform_set.h  render_light_manager.cpp  render_list.cpp  render_list.h  render_material.cpp  render_material.hpp  render_material_manager.cpp  render_material_manager.hpp  render_pin.cpp  render_pin.h  (+26 more)
event_horizon/house/: house_context.h  house_menu.cpp  house_menu.h  house_menu_list.cpp  house_menu_list.h  house_scene.cpp  house_scene.h  observable_collection.h  structural_collection.cpp  structural_collection.h
mongo/: Dockerfile
native/: CMakeLists.txt  dockerfile-asset_daemon  dockerfile-assetdaemon  dockerfile-assetdaemon.docdev  dockerfile-lib  dockerfile-packetbuilder-boost.docdev  dockerfile-packetbuilder.docdev  ehlib_build.sh  gitbuild.sh  package_build.sh  package_build_boost.sh
native/core/: TTF.h  (+89 more)
nginx/: Dockerfile  Dockerfile-standalone.dev  Dockerfile.dev  ca.crt  default.conf  dhparam-2048.pem  dns-cert-key.pem  http-standalone.conf  http.conf  localhost.pem  nginx.conf  nginx.conf.linux.local  nginx.conf.win.local  stream.conf
node-api-server/: app.js  dockerfile  package.json
restful-api/: Dockerfile.dev  Dockerfile.withcache  app.js  config_api.js  db.js  dockerfile  logger.js  package-lock.json  package.json
(+997 files in other folders)
